objects/Account__x.object
<CustomObject>
    <fields>
        <fullName>dat_Original_c__c</fullName>
        <externalDeveloperName>dat_Original__c</externalDeveloperName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fchk_Account_Onwer_Is_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>fchk_Account_Onwer_Is_Active__c</externalDeveloperName>
        <label>Account Onwer Is Active</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fnum_CompOrgIdSequence_c__c</fullName>
        <externalDeveloperName>fnum_CompOrgIdSequence__c</externalDeveloperName>
        <label>Comp Org Id Sequence</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ftxt_AccountGroupName_c__c</fullName>
        <externalDeveloperName>ftxt_AccountGroupName__c</externalDeveloperName>
        <label>Account Group Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ftxt_TeCustomerKeyId_c__c</fullName>
        <externalDeveloperName>ftxt_TeCustomerKeyId__c</externalDeveloperName>
        <label>TE Customer Key Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lkp_AccountLookupId_c__c</fullName>
        <externalDeveloperName>lkp_AccountLookupId__c</externalDeveloperName>
        <label>Account Lookup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num_CustomerKeyId_c__c</fullName>
        <externalDeveloperName>num_CustomerKeyId__c</externalDeveloperName>
        <label>TE Customer Key Id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_PartnerCount_c__c</fullName>
        <externalDeveloperName>num_PartnerCount__c</externalDeveloperName>
        <label>Partner Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_ProjectCount_c__c</fullName>
        <externalDeveloperName>num_ProjectCount__c</externalDeveloperName>
        <label>Project Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Region_c__c</fullName>
        <externalDeveloperName>pkl_Region__c</externalDeveloperName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkl_VehicleType_c__c</fullName>
        <externalDeveloperName>pkl_VehicleType__c</externalDeveloperName>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>txt_AccountGroupCode_c__c</fullName>
        <externalDeveloperName>txt_AccountGroupCode__c</externalDeveloperName>
        <label>Account Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_AcctMgrCode_c__c</fullName>
        <externalDeveloperName>txt_AcctMgrCode__c</externalDeveloperName>
        <label>Account Manager Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_AcctMgrName_c__c</fullName>
        <externalDeveloperName>txt_AcctMgrName__c</externalDeveloperName>
        <label>Account Manager Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CompanyOrganizationId_c__c</fullName>
        <externalDeveloperName>txt_CompanyOrganizationId__c</externalDeveloperName>
        <label>Company Organization Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CustomerPartnerAccountNumber_c__c</fullName>
        <externalDeveloperName>txt_CustomerPartnerAccountNumber__c</externalDeveloperName>
        <label>Customer Partner Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_DD1RegionDesc_c__c</fullName>
        <externalDeveloperName>txt_DD1RegionDesc__c</externalDeveloperName>
        <label>DD1 Region Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_DD2RegionDesc_c__c</fullName>
        <externalDeveloperName>txt_DD2RegionDesc__c</externalDeveloperName>
        <label>DD2 Region Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_DD3RegionDesc_c__c</fullName>
        <externalDeveloperName>txt_DD3RegionDesc__c</externalDeveloperName>
        <label>DD3 Region Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_DistributionChannel_c__c</fullName>
        <externalDeveloperName>txt_DistributionChannel__c</externalDeveloperName>
        <label>Distribution Channel Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_GamCode_c__c</fullName>
        <externalDeveloperName>txt_GamCode__c</externalDeveloperName>
        <label>GAM Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_GamName_c__c</fullName>
        <externalDeveloperName>txt_GamName__c</externalDeveloperName>
        <label>GAM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryBusinessCode_c__c</fullName>
        <externalDeveloperName>txt_IndustryBusinessCode__c</externalDeveloperName>
        <label>Industry Business Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryCodeLevel2_c__c</fullName>
        <externalDeveloperName>txt_IndustryCodeLevel2__c</externalDeveloperName>
        <label>Industry Code Level 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryCodeLevel3_c__c</fullName>
        <externalDeveloperName>txt_IndustryCodeLevel3__c</externalDeveloperName>
        <label>Industry Code Level 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryNameLevel1_c__c</fullName>
        <externalDeveloperName>txt_IndustryNameLevel1__c</externalDeveloperName>
        <label>Industry Name Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryNameLevel2_c__c</fullName>
        <externalDeveloperName>txt_IndustryNameLevel2__c</externalDeveloperName>
        <label>Industry Name Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_IndustryNameLevel3_c__c</fullName>
        <externalDeveloperName>txt_IndustryNameLevel3__c</externalDeveloperName>
        <label>Industry Name Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MarketingManagerCode_c__c</fullName>
        <externalDeveloperName>txt_MarketingManagerCode__c</externalDeveloperName>
        <label>Marketing Manager Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MarketingManagerName_c__c</fullName>
        <externalDeveloperName>txt_MarketingManagerName__c</externalDeveloperName>
        <label>Marketing Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ProfitCenter_c__c</fullName>
        <externalDeveloperName>txt_ProfitCenter__c</externalDeveloperName>
        <label>Profit Center</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ReadPublicGroupId_c__c</fullName>
        <externalDeveloperName>txt_ReadPublicGroupId__c</externalDeveloperName>
        <label>Read Public Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SalesOrgId_c__c</fullName>
        <externalDeveloperName>txt_SalesOrgId__c</externalDeveloperName>
        <label>Sales Org Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SalesTerritoryCode_c__c</fullName>
        <externalDeveloperName>txt_SalesTerritoryCode__c</externalDeveloperName>
        <label>Territory Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SalesTerritoryName_c__c</fullName>
        <externalDeveloperName>txt_SalesTerritoryName__c</externalDeveloperName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TeAccountExternalKey_c__c</fullName>
        <externalDeveloperName>txt_TeAccountExternalKey__c</externalDeveloperName>
        <label>TE Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_WorldwideCorpAccountName_c__c</fullName>
        <externalDeveloperName>txt_WorldwideCorpAccountName__c</externalDeveloperName>
        <label>Worldwide Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_WorldwideCorpAccountNumber_c__c</fullName>
        <externalDeveloperName>txt_WorldwideCorpAccountNumber__c</externalDeveloperName>
        <label>Worldwide Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_WritePublicGroupId_c__c</fullName>
        <externalDeveloperName>txt_WritePublicGroupId__c</externalDeveloperName>
        <label>Write Public Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>